--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+altgraph==0.17
+future==0.18.2
 mss==5.1.0
+pefile==2019.4.18
+PyInstaller==3.6
+pywin32-ctypes==0.2.0
 selenium==3.141.0
 urllib3==1.25.9
