--- a/.gitignore
+++ b/.gitignore
@@ -209,5 +209,6 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
-# 截图输出
-screenshots
+# 程序输出
+screenshots/
+reports/
