Update to 1.3.0 - Now can add taskbar to page screenshot images, options available.

--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,8 @@
 {
   "screenshots": {
     "page": true,
-    "screen": true
+    "screen": true,
+    "page_taskbar": true,
+    "taskbar_resize_factor": 1.25
   }
 }
